adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas facilis est esse fuga pariatur, repudiandae commodi recusandae cum totam cupiditate! Mollitia optio obcaecati voluptates nemo error ex veritatis esse iste!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestias itaque harum recusandae tempore labore ipsam, sunt neque voluptates sed accusantium. Voluptatum illo deserunt nam voluptate enim qui, sed eligendi!</p>
 </body>
 </html>
